[package]
name = "richter"
version = "0.1.0"
authors = ["Cormac O'Brien <cormac@c-obrien.org>"]
edition = "2021"

[dependencies]
arrayvec = "0.7"
bitflags = "2.4"
bumpalo = "3.14"
byteorder = "1.5"
cgmath = "0.18"
chrono = "0.4"
env_logger = "0.10"
failure = "0.1"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
nom = "7.1"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
png = "0.17"
rand = { version = "0.8", features = ["small_rng"] }
regex = "1.10"
# rodio = "0.12"
rodio = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaderc = "0.8"
slab = "0.4"
structopt = "0.3"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0"
uluru = "3"
wgpu = { version = "0.18", features = ["spirv"] }
winit = { version = "0.29", features = ["rwh_05"] }

[profile.dev.package."*"]
opt-level = 3
